--- a/tests/generational/Makefile.am
+++ b/tests/generational/Makefile.am
@@ -4,5 +4,5 @@ YOG_DIR = ../..
 bin_PROGRAMS = test
 test_SOURCES = $(YOG_DIR)/src/gc/generational.c
 
-test_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST
+test_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST -DGC_GENERATIONAL
 test_LDFLAGS = -lcunit
