--- a/tests/generational/Makefile.in
+++ b/tests/generational/Makefile.in
@@ -177,7 +177,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 YOG_DIR = ../..
 test_SOURCES = $(YOG_DIR)/src/gc/generational.c
-test_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST
+test_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST -DGC_GENERATIONAL
 test_LDFLAGS = -lcunit
 all: all-am
 
