implemented GC initialization.
--HG--
extra : convert_revision : 6a5592f8eceebd80d6a5fe3adf1575426cfdf992

--- a/tests/copying/Makefile.am
+++ b/tests/copying/Makefile.am
@@ -1,8 +1,8 @@
 
 YOG_DIR = ../..
 
-bin_PROGRAMS = test
-test_SOURCES = $(YOG_DIR)/src/gc/copying.c
+bin_PROGRAMS = test-copying
 
-test_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST
-test_LDFLAGS = -lcunit
+test_copying_SOURCES = $(YOG_DIR)/src/gc/copying.c
+test_copying_CFLAGS = -Wall -I$(YOG_DIR)/include -DTEST_COPYING -DGC_COPYING
+test_copying_LDFLAGS = -lcunit
