--- a/Makefile.in
+++ b/Makefile.in
@@ -3,11 +3,13 @@ YOG_COPYING = yog-copying
 YOG_MARK_SWEEP = yog-mark-sweep
 YOG_MARK_SWEEP_COMPACT = yog-mark-sweep-compact
 YOG_BDW = yog-bdw
+YOG_GENERATIONAL = yog-generational
 YOG_DIR = src
 YOG_COPYING_LIB = $(YOG_DIR)/libyog-copying.la
 YOG_MARK_SWEEP_LIB = $(YOG_DIR)/libyog-mark-sweep.la
 YOG_MARK_SWEEP_COMPACT_LIB = $(YOG_DIR)/libyog-mark-sweep-compact.la
 YOG_BDW_LIB = $(YOG_DIR)/libyog-bdw.la
+YOG_GENERATIONAL_LIB = $(YOG_DIR)/libyog-generational.la
 
 ONIG_DIR = onig
 ONIG_LIB = $(ONIG_DIR)/libonig.la
@@ -23,6 +25,7 @@ all:
 	./libtool --tag=CC --mode=link $(CC) -o $(YOG_MARK_SWEEP) $(YOG_MARK_SWEEP_LIB) $(ONIG_LIB)
 	./libtool --tag=CC --mode=link $(CC) -o $(YOG_MARK_SWEEP_COMPACT) $(YOG_MARK_SWEEP_COMPACT_LIB) $(ONIG_LIB)
 	./libtool --tag=CC --mode=link $(CC) -o $(YOG_BDW) $(YOG_BDW_LIB) $(ONIG_LIB) $(BDW_LIB)
+	./libtool --tag=CC --mode=link $(CC) -o $(YOG_GENERATIONAL) $(YOG_GENERATIONAL_LIB) $(ONIG_LIB)
 
 clean: 
 	cd $(ONIG_DIR) && make clean
