--- a/Makefile.in
+++ b/Makefile.in
@@ -17,15 +17,17 @@ ONIG_LIB = $(ONIG_DIR)/libonig.la
 BDW_DIR = bdwgc
 BDW_LIB = $(BDW_DIR)/libgc.la
 
+LDFLAGS = -pg
+
 all: 
 	(cd $(ONIG_DIR); make)
 	(cd $(BDW_DIR); make)
 	(cd $(YOG_DIR); make)
-	./libtool --tag=CC --mode=link $(CC) -o $(YOG_COPYING) $(YOG_COPYING_LIB) $(ONIG_LIB)
-	./libtool --tag=CC --mode=link $(CC) -o $(YOG_MARK_SWEEP) $(YOG_MARK_SWEEP_LIB) $(ONIG_LIB)
-	./libtool --tag=CC --mode=link $(CC) -o $(YOG_MARK_SWEEP_COMPACT) $(YOG_MARK_SWEEP_COMPACT_LIB) $(ONIG_LIB)
-	./libtool --tag=CC --mode=link $(CC) -o $(YOG_BDW) $(YOG_BDW_LIB) $(ONIG_LIB) $(BDW_LIB)
-	./libtool --tag=CC --mode=link $(CC) -o $(YOG_GENERATIONAL) $(YOG_GENERATIONAL_LIB) $(ONIG_LIB)
+	./libtool --tag=CC --mode=link $(CC) $(LDFLAGS) -o $(YOG_COPYING) $(YOG_COPYING_LIB) $(ONIG_LIB)
+	./libtool --tag=CC --mode=link $(CC) $(LDFLAGS) -o $(YOG_MARK_SWEEP) $(YOG_MARK_SWEEP_LIB) $(ONIG_LIB)
+	./libtool --tag=CC --mode=link $(CC) $(LDFLAGS) -o $(YOG_MARK_SWEEP_COMPACT) $(YOG_MARK_SWEEP_COMPACT_LIB) $(ONIG_LIB)
+	./libtool --tag=CC --mode=link $(CC) $(LDFLAGS) -o $(YOG_BDW) $(YOG_BDW_LIB) $(ONIG_LIB) $(BDW_LIB)
+	./libtool --tag=CC --mode=link $(CC) $(LDFLAGS) -o $(YOG_GENERATIONAL) $(YOG_GENERATIONAL_LIB) $(ONIG_LIB)
 
 clean: 
 	cd $(ONIG_DIR) && make clean
