rearranged configure.ac.
--HG--
extra : convert_revision : aece203b1e1907cefbbb86400b8e3f79702074fb

--- a/configure.ac
+++ b/configure.ac
@@ -9,23 +9,34 @@ AC_CONFIG_HEADER([config.h])
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_INSTALL
+AC_PROG_LN_S
+AC_PROG_MAKE_SET
+AC_PROG_RANLIB
 AM_PROG_CC_C_O
 AC_PROG_LIBTOOL
 
 # Checks for libraries.
 AC_CHECK_LIB([cunit], [CU_initialize_registry], with_cunit="yes", with_cunit="no")
+AC_CHECK_LIB([pthread], [pthread_create])
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([stdlib.h string.h strings.h])
+AC_CHECK_HEADERS([inttypes.h limits.h stddef.h stdint.h stdlib.h string.h strings.h sys/time.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
+AC_HEADER_TIME
+AC_TYPE_UINT8_T
 
 # Checks for library functions.
 AC_FUNC_MALLOC
-AC_CHECK_FUNCS([atexit bzero])
+AC_FUNC_MMAP
+AC_FUNC_REALLOC
+AC_FUNC_STRTOD
+AC_FUNC_VPRINTF
+AC_CHECK_FUNCS([atexit gettimeofday isascii memchr memmove memset munmap strchr strrchr strstr strtol])
 
 AC_ARG_ENABLE(profile, 
               AC_HELP_STRING([--enable-profile], 
@@ -47,7 +58,8 @@ if test "${with_cunit}" = "yes"; then
                      tests/mark-sweep-compact/Makefile
                      tests/generational/Makefile])
 fi
-AC_CONFIG_SUBDIRS([bdwgc onig])
+AC_CONFIG_SUBDIRS([bdwgc
+                   onig])
 AC_OUTPUT
 
 # vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
