--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,10 @@ AC_C_CONST
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
 AC_TYPE_UINT8_T
+AC_CHECK_SIZEOF(void*)
+AC_CHECK_SIZEOF(int)
+AC_CHECK_SIZEOF(long)
+AC_CHECK_SIZEOF(long long)
 
 # Checks for library functions.
 AC_FUNC_MALLOC
